--- a/Shopping/Views/Shared/Components/Categories/Default.cshtml
+++ b/Shopping/Views/Shared/Components/Categories/Default.cshtml
@@ -10,7 +10,7 @@
                     <i class="fas fa-folder"></i>
                 </div>
                 <span class="category-name">@item.Name</span>
-                <span class="category-count">@(ViewBag.CategoryProductCount != null &&
+                <span>@(ViewBag.CategoryProductCount != null &&
                                 ViewBag.CategoryProductCount.ContainsKey(item.Id) ? ViewBag.CategoryProductCount[item.Id] : 0)</span>
             </a>
         </li>
