Trang chủ: thay _SliderPartial bằng ViewComponent Sliders, thêm carousel Bootstrap hiển thị slider kích hoạt

--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!-- Slider Section -->
-<partial name="_SliderPartial" />
+@await Component.InvokeAsync("Sliders")
 
 <!-- Main Content -->
 <div class="container my-5">
