--- a/Shopping/Views/Shared/Components/Brands/Default.cshtml
+++ b/Shopping/Views/Shared/Components/Brands/Default.cshtml
@@ -10,6 +10,7 @@
                     <i class="fas fa-award"></i>
                 </div>
                 <span class="brand-name">@item.Name</span>
+                <span class="brand-chevron"><i class="fas fa-angle-right"></i></span>
             </a>
         </li>
     }
